# CMakeExamples

./: README.md
App/: CMakeLists.txt  README.md
App/sources/: main.cpp
GTestExample/: README.md
GTestExample/sources/: bar.cpp  bar.h  foo.cpp  foo.h  main.cpp
GTestExample/test/: CMakeLists.txt
GTestExample/test/bar/: CMakeLists.txt  bar_test.cpp
GTestExample/test/foo/: CMakeLists.txt  foo_test.cpp
StaticLibrary/: CMakeLists.txt  README.md
StaticLibrary/sources/: foo.h
StaticLibraryTest/: CMakeLists.txt  README.md
StaticLibraryTest2/: CMakeLists.txt  README.md
StaticLibraryTest2/sources/: main.cpp
StaticLink/build_tree/: CMakeLists.txt  README.md
StaticLink/out_of_tree/: README.md
StaticLink/out_of_tree/App/: CMakeLists.txt
StaticLink/out_of_tree/App/sources/: main.cpp
StaticLink/out_of_tree/MyLib/sources/bar/: bar.cpp
UserModules/: CMakeLists.txt  README.md
